# DJANGO_JWT_ACCESSANDREFRESH

./: README.md  db.sqlite3  pyproject.toml
core/: settings.py  urls.py
customUser/: admin.py  manger.py  models.py  urls.py  views.py
customUser/migrations/: 0001_initial.py  0002_userdata_is_deleted.py  0003_alter_userdata_name.py  0004_accesstoken.py
